[project]
name = "stockprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "black>=25.12.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "icecream>=2.1.8",
    "idna==3.11",
    "notebook>=7.5.1",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "passlib==1.7.4",
    "pillow==12.0.0",
    "pycparser==2.23",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
]
