[project]
name = "stockprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "icecream>=2.1.8",
]
